# ClutterControl

./: Cargo.toml  README.md  storage.json
api/: Cargo.toml
api/src/: endpoints.rs  main.rs
base/: Cargo.toml
base/src/: lib.rs  main.rs  models.rs  storage.rs
logproclol/src/: lib.rs
server/: Cargo.toml  storage.json
server/api/src/: endpoints.rs
server/base/: Cargo.toml
server/base/src/: auth.rs  lib.rs  models.rs
server/logproclol/: Cargo.toml
src/: models.rs  storage.rs
