[package]
name = "cluttercontrol-base"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = {workspace = true}
logproclol = {path = "../logproclol"}
argon2 = { version = "0.5.3", features = ["alloc"] }
